force-app/main/default/objects/Account/fields/Logo__c.field-meta.xml
<CustomField>
    <fullName>Logo__c</fullName>
    <label>Logo</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>