force-app/main/default/objects/Account/fields/recordUrl__c.field-meta.xml
<CustomField>
    <fullName>recordUrl__c</fullName>
    <formula>&apos;https://pmtvsample-developer-edition.ap27.force.com/s/company/&apos; +  Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>recordUrl</label>
    <type>Text</type>
</CustomField>