force-app/main/default/objects/Account/fields/Working_Days__c.field-meta.xml
<CustomField>
    <fullName>Working_Days__c</fullName>
    <label>Working Days</label>
    <length>30</length>
    <type>Text</type>
</CustomField>